--- a/index.html
+++ b/index.html
@@ -1058,7 +1058,7 @@
             </div>
             <div class="about-content">
                 <div class="about-text">
-                    <p>تأسست شركة الاستباق لتكون رائدة في مجال الاستشارات الأمنية بالمملكة العربية السعودية، حيث نقدم حلولاً أمنية متكاملة تعتمد على الخبرة الميدانية العميقة والمعرفة الاستراتيجية المتقدمة، بناءاً على المعرفة العلمية والعملية ونضمن لعملائنا بإذن الله أعلى الخدمات المهنية الاحترافية لكافة المجالات الأمنية ونفخر بفريقنا المحترف المتخصص في مختلف التخصصات.</p>
+                    <p>تأسست شركة الاستباق لتكون رائدة في مجالات الاستشارات الأمنية بالمملكة العربية السعودية، حيث نقدم حلولاً أمنية متكاملة تعتمد على الخبرة الميدانية العميقة والمعرفة الاستراتيجية المتقدمة، بناءاً على المعرفة العلمية والعملية ونضمن لعملائنا بإذن الله أعلى الخدمات المهنية الاحترافية لكافة المجالات الأمنية ونفخر بفريقنا المحترف المتخصص في مختلف التخصصات.</p>
                     
                     <div class="about-features">
                         <div class="feature">
@@ -1128,7 +1128,7 @@
     <section id="goals" class="goals">
         <div class="container">
             <div class="section-title">
-                <h2>الأهداف الاستراتيجية</h2>
+                <h2>الأهداف </h2>
                 <p>نسير بثبات لتحقيق أهدافنا التي تصب في مصلحة عملائنا ومجتمعنا</p>
             </div>
             <div class="cards-container">
@@ -1160,7 +1160,7 @@
     <section id="values" class="values">
         <div class="container">
             <div class="section-title">
-                <h2>قيمنا الأساسية</h2>
+                <h2>القيم</h2>
                 <p>قيم راسخة توجه أعمالنا وتشكل أساس ثقافتنا المؤسسية</p>
             </div>
             <div class="cards-container">
@@ -1194,7 +1194,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>الاستباق</h3>
-                    <p>شركة مهنية سعودية متخصصة في الاستشارات الأمنية، حاصلة على ترخيص من الهيئة العليا للأمن الصناعي. ومعتمدة لدى الجهات الحكومية والخاصة.</p>
+                    <p>شركة مهنية سعودية متخصصة في مجالات الاستشارات الأمنية، حاصلة على ترخيص من الهيئة العليا للأمن الصناعي. ومعتمدة لدى الجهات الحكومية والخاصة.</p>
                 </div>
                 <div class="footer-section">
                     <h3>روابط سريعة</h3>
